Split README into Workspace Guide (root) and Player Guide (source)